kustomize/song-app/base/song-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: song
  namespace: demo
  labels:
    app: song
    app.kubernetes.io/component: song
    app.kubernetes.io/instance: song
    app.kubernetes.io/name: song
    app.kubernetes.io/part-of: music-streaming-app
    app.openshift.io/runtime: quarkus
    app.openshift.io/runtime-version: "3.0.3.Final"
  annotations:
    argocd.argoproj.io/hook: Sync
    argocd.argoproj.io/sync-wave: "100"
spec:
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: song
  strategy: 
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: song
        version: v1
        maistra.io/expose-route: 'true'
      annotations:
        sidecar.istio.io/inject: "false"
        sidecar.istio.io/rewriteAppHTTPProbers: "false"
    spec:
      containers:
      - name: song
        image: quay.io/voravitl/song:otel
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          requests:
            cpu: "0.05"
            memory: 100Mi
          limits:
            cpu: "0.2"
            memory: 400Mi
        readinessProbe:
          httpGet:
            path: /q/health/ready
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 300
        livenessProbe:
          httpGet:
            path: /q/health/live
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 600
        securityContext:
          seccompProfile: #"RuntimeDefault" or "Localhost"
            type: RuntimeDefault
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          capabilities:
            drop: ["ALL"]
          readOnlyRootFilesystem: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      tolerations:
      - effect: NoExecute
        key: node.kubernetes.io/unreachable
        operator: Exists
        tolerationSeconds: 60
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
