kustomize/song-app/base/song-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: song
  namespace: demo
  labels:
    app: song
  annotations:
    argocd.argoproj.io/hook: Sync
    argocd.argoproj.io/sync-wave: "200"
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: song
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
