kustomize/song-app/base/song-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: song
  namespace: demo
  annotations:
    argocd.argoproj.io/hook: Sync
    argocd.argoproj.io/sync-wave: "300"
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: song
    weight: 100
  wildcardPolicy: None
